fix(watchlist): fix header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@ body,html {
   background: transparent;
   border: 1px solid rgb(107, 107, 107);
   border-radius: 15px;
-  height: 60px
+  height: 60px;
 }
 
 .filter-btn:hover {
